edge_proxy/envoy-config.yaml
---
admin:
  access_log_path: "/tmp/admin_access.log"
  address: 
    socket_address: 
      address: "127.0.0.1"
      port_value: 9901
static_resources: 
  listeners:
    - 
      name: "http_listener"
      address: 
        socket_address: 
          address: "0.0.0.0"
          port_value: 80
      filter_chains:
          filters: 
            - 
              name: "envoy.http_connection_manager"
              config:
                stat_prefix: "ingress"
                codec_type: "AUTO"
                generate_request_id: true
                route_config: 
                  name: "local_route"
                  virtual_hosts: 
                    - 
                      name: "http-route"
                      domains: 
                        - "*"
                      routes:
                        - 
                          match: 
                            prefix: "/nestjs"
                          route:
                            prefix_rewrite: "/"
                            cluster: "nestjs"
                        - 
                          match: 
                            prefix: "/nodejs"
                          route:
                            prefix_rewrite: "/"
                            cluster: "nodejs" 
                        - 
                          match: 
                            path: "/"
                          route:
                            cluster: "service_1"
                http_filters:
                  - 
                    name: "envoy.router"
                    config: {}
  clusters:
    - 
      name: "service_1"
      connect_timeout: "0.25s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        - 
          socket_address: 
            address: "service_1_envoy"
            port_value: 8786
        - 
          socket_address: 
            address: "service_2_envoy"
            port_value: 8789
    
    -
      name: "nodejs"
      connect_timeout: "0.25s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        -
          socket_address:
            address: "service_4_envoy"
            port_value: 8792
    
    -
      name: "nestjs"
      connect_timeout: "0.25s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        -
          socket_address:
            address: "service_5_envoy"
            port_value: 8793
